--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Get:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,632 B]\n",
             "Get:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease [1,581 B]\n",
@@ -88,16 +88,16 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
-        "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "wOJqxG_RPSwp",
         "outputId": "ddaa0506-a9cd-4400-e6c5-d4f8589d1f73"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
             "|                  id|      date|date_built| price|bedrooms|bathrooms|sqft_living|sqft_lot|floors|waterfront|view|\n",
@@ -127,30 +127,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
       "outputs": [],
       "source": [
         "# 2. Create a temporary view of the DataFrame.\n",
+        "# use the function .createOrReplaceTempView\n",
         "home_sales_df.createOrReplaceTempView('sales')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
-        "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "L6fkwOeOmqvq",
         "outputId": "faaa0a5c-0cad-4045-e5d2-bfef81438147"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+---------+---------+\n",
             "|year_sold|avg_price|\n",
@@ -166,6 +167,7 @@
       ],
       "source": [
         "# 3. What is the average price for a four bedroom house sold per year, rounded to two decimal places?\n",
+        "# Create SQL query selecting the year from the date and perform an AVG and ROUND on the price from the Sales table. Filter to bedrooms = 4\n",
         "sql = (\"\"\"\n",
         "SELECT\n",
         "  YEAR(date) AS year_sold,\n",
@@ -180,18 +182,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
-        "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "l8p_tUS8h8it",
         "outputId": "918baa41-cc8b-4c35-83f7-86ddffa162b4"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+----------+---------+\n",
             "|year_built|avg_price|\n",
@@ -212,6 +214,7 @@
       "source": [
         "# 4. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms and 3 bathrooms, rounded to two decimal places?\n",
+        "# Build on the query above and add the bathrooms = 3, bedrooms = 4\n",
         "sql = \"\"\"\n",
         "SELECT\n",
         "  YEAR(date_built) as year_built,\n",
@@ -227,18 +230,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
-        "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Y-Eytz64liDU",
         "outputId": "262df627-bb85-49fa-d167-7433acb22524"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+----------+---------+\n",
             "|year_built|avg_price|\n",
@@ -260,6 +263,7 @@
         "# 5. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
         "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
+        "# Build on the above query and filter to floors = 2 and sqft = >= 2k\n",
         "sql = \"\"\"\n",
         "SELECT\n",
         "  YEAR(date_built) as year_built,\n",
@@ -277,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -287,8 +291,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+----+----------+\n",
             "|view| avg_price|\n",
@@ -324,6 +328,7 @@
         "# 6. What is the average price of a home per \"view\" rating, rounded to two decimal places,\n",
         "# having an average home price greater than or equal to $350,000? Order by descending view rating.\n",
         "# Although this is a small dataset, determine the run time for this query.\n",
+        "# Create an SQL query that groups homes by views with an avg price of 350k\n",
         "\n",
         "start_time = time.time()\n",
         "\n",
@@ -344,28 +349,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
-        "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "KAhk3ZD2tFy8",
         "outputId": "3668c5bb-7502-48b7-df55-76f5bb2e3639"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "DataFrame[]"
             ]
           },
+          "execution_count": 20,
           "metadata": {},
-          "execution_count": 20
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "# 7. Cache the the temporary table home_sales.\n",
+        "# use the built-in funcitons to cache and check the data\n",
         "spark.sql('cache table sales')"
       ]
     },
@@ -373,22 +379,22 @@
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
-        "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "4opVhbvxtL-i",
         "outputId": "2b2273db-5f9c-46be-c2e2-2bf6624ff838"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 22,
           "metadata": {},
-          "execution_count": 22
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -398,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -408,8 +414,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+----+----------+\n",
             "|view| avg_price|\n",
@@ -446,6 +452,7 @@
         "# the average price of a home per \"view\" rating, rounded to two decimal places,\n",
         "# having an average home price greater than or equal to $350,000.\n",
         "# Determine the runtime and compare it to the uncached runtime.\n",
+        "# The runtime of the cached data is nearly half of the uncached data. \n",
         "\n",
         "start_time = time.time()\n",
         "\n",
@@ -503,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -513,8 +520,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+----+----------+\n",
             "|view| avg_price|\n",
@@ -551,6 +558,7 @@
         "# the average price of a home per \"view\" rating, rounded to two decimal places,\n",
         "# having an average home price greater than or equal to $350,000.\n",
         "# Determine the runtime and compare it to the cached runtime.\n",
+        "# The cached data ran 1.16 seconds faster than the partitioned data. \n",
         "\n",
         "start_time = time.time()\n",
         "\n",
@@ -573,22 +581,22 @@
       "cell_type": "code",
       "execution_count": 29,
       "metadata": {
-        "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "hjjYzQGjtbq8",
         "outputId": "435c8fbb-922a-4d44-fb89-f0c6c28d7893"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "DataFrame[]"
             ]
           },
+          "execution_count": 29,
           "metadata": {},
-          "execution_count": 29
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -600,16 +608,16 @@
       "cell_type": "code",
       "execution_count": 30,
       "metadata": {
-        "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Sy9NBvO7tlmm",
         "outputId": "17ff1438-6bba-4e6a-d55e-9e9fb5cf64e1"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "all clear\n"
           ]
